add api auth activation user code
