# src/controllers/auth.controller.ts
@@ -22,7 +22,19 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test("at least one uppercase letter", "Password must contain at least one uppercase letter", (value) => {
+      if (!value) return false;
+      const regex = /(?=.*[A-Z])/;
+      return regex.test(value);
+    })
+    .test("at least one number", "Password must contain at least one number", (value) => {
+      if (!value) return false;
+      const regex = /(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Passwords must match"),
@@ -72,6 +84,7 @@ export default {
 
       const userByIdentifier = await UserModel.findOne({
         $or: [{ email: identifier }, { username: identifier }],
+        isActive: true,
       });
       //* Check does the user exist?
       if (!userByIdentifier) {
@@ -96,7 +109,7 @@ export default {
       res.status(400).json({ message: err.message, data: null });
     }
   },
-
+  //# me function
   async me(req: IRegUser, res: Response) {
     /** 
     #swagger.tags = ['Auth']
@@ -109,6 +122,28 @@ export default {
       const result = await UserModel.findById(user?.id);
 
       res.status(200).json({ message: "success get user", data: result });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({ message: err.message, data: null });
+    }
+  },
+  //# code activation user
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody={
+       required: true,
+       schema: {
+         $ref: "#/components/schemas/ActivationRequest"
+       }
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate({ activationCode: code }, { isActive: true }, { new: true });
+
+      res.status(200).json({ message: "success activation user", data: user });
     } catch (error) {
       const err = error as unknown as Error;
       res.status(400).json({ message: err.message, data: null });
